# sdk-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: aiogram_track_example.py  pyTelegramBotAPI_async_track_example.py  pyTelegramBotAPI_track_example.py  python_telegram_bot_track_example.py
src/dashgram/: __init__.py  client.py  enums.py  exceptions.py  utils.py
src/dashgram/integrations/: aiogram.py  base.py  telebot.py  telegram.py
tests/: __init__.py  conftest.py  test_client.py  test_enums.py  test_integrations_aiogram.py  test_integrations_base.py  test_integrations_telebot.py  test_integrations_telegram.py  test_utils.py
