[project]
name = "dashgram"
version = "0.1.0"
description = "A Python SDK for Dashgram"
license = { text = "MIT" }
authors = [
    { name="MrNereof", email="mrnereof@gmail.com" }
]
keywords = ["sdk", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.28.1",
]

[project.urls]
"Homepage" = "https://github.com/Dashgram/sdk-python"
"Bug Tracker" = "https://github.com/Dashgram/sdk-python/issues"
"Source Code" = "https://github.com/Dashgram/sdk-python"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "aiogram>=3.13.1",
    "pytelegrambotapi>=4.23.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "python-telegram-bot>=21.6",
]
